# BatchManager

./: .gitignore  CMakeLists.txt  main.cpp
batch/: process.h
command/: __init__.h  cmd.h  end.h  for.h  join.h  link.h  not.h  run.h  set.h  var.h
command/basic/: command.h  environment.h
common/: exception.h
